# swarp_win

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  README_WINDOWS.md  config.h.in  copy_dlls.bat  copy_dlls.sh  create_dist.sh
cmake/: FindCFITSIO.cmake
src/: CMakeLists.txt
src/fits/: CMakeLists.txt  fitsbody.c  fitscat.c
src/wcs/: CMakeLists.txt
